syntax = "proto3";

option go_package = "api/node;api";

service Node {
    // 添加&&更新节点数据
    rpc UpdateNode(UpdateNodeReq) returns (UpdateNodeReply) {}

    // 列出所有节点数据
    rpc ListNode(ListNodeReq) returns (ListNodeReply) {}

    // 删除节点
    rpc DeleteNode(DeleteNodeReq) returns (DeleteNodeReply) {}
}

message NodeItem {
    int64 id = 1;
    string uuid = 2;
    string name = 3;
    string metadata = 4;
    string desc = 5;
    int64 create_at = 6;
    int64 updated_at = 7;
}

message UpdateNodeReq {
    NodeItem item = 1;
}

message UpdateNodeReply {
    int64 ret = 1;
    string msg = 2;
}

message ListNodeReq {
}

message ListNodeReply {
    int64 ret = 1;
    string msg = 2;
    repeated NodeItem items = 3;
}

message DeleteNodeReq {
    int64 id = 1;
}

message DeleteNodeReply {
    int64 ret = 1;
    string msg = 2;
}